--- a/templates/application.html
+++ b/templates/application.html
@@ -1,14 +1,17 @@
-{% load render_bundle from webpack_loader %}<!DOCTYPE html>
-<html lang="en">
+{% load render_bundle from webpack_loader %}
+
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>Django Vue Integration</title>
+    {% render_bundle 'app' 'css' %}
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript><div id="app">
-     <app></app>
- </div>{% render_bundle 'app' %}<!-- built files will be auto injected -->
-  </body>
+  <noscript>
+    <strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  </noscript>
+
+  <div id="app">
+    <app></app>
+  </div>
+  {% render_bundle 'app' 'js' %}
+</body>
 </html>
