--- a/templates/application.html
+++ b/templates/application.html
@@ -1,6 +1,7 @@
 {% load render_bundle from webpack_loader %}
 
 <html>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
     {% render_bundle 'app' 'css' %}
   </head>
