--- a/frontend/src/components/markdown.css
+++ b/frontend/src/components/markdown.css
@@ -1,9 +1,9 @@
 .content >>> h2 {
-@apply text-2xl text-lauraOrange;
+@apply text-2xl text-red-600;
 }
 
 .content >>> h3 {
-@apply text-xl text-lauraOrange;
+@apply text-xl text-red-600;
 }
 
 .content >>> ul {
